# chordscript

./: Cargo.toml  README.adoc  TODO.adoc  make.sh
.github/workflows/: docs.yml  olddocs.yml
chordscript/: Cargo.toml
chordscript-cli/: main.rs
chordscript-wasm/: Cargo.toml  index.html  make.sh  server.go  shell.nix
chordscript-wasm/public/: index.html
chordscript-wasm/src/: lib.rs
chordscript/src/: constants.rs  errors.rs  lib.rs  macros.rs  parser.rs  reporter.rs  structs.rs  templates.rs
chordscript/src/deserialise/: i3.rs  i3_shell.rs  keyspace_preview.rs  list_preview.rs  mod.rs  shellscript.rs
chordscript/src/parser/: keyspaces.rs  lexemes.rs  shortcuts.rs
chordscript/src/templates/: debug_shortcuts.rs  i3_shell.rs  shellscript.rs
docs/: index.html
src/: constants.rs  errors.rs  keyspace.rs  lexer.rs  macros.rs  main.rs  messages.rs  parser.rs  reporter.rs  structs.rs
src/deserialise/: i3.rs  i3_shell.rs  keyspace_preview.rs  list_preview.rs  mod.rs  shellscript.rs
