[package]
name = "chordscript-cli"
version = "0.1.0"
authors = ["Aryailia <Aryailia@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "chordscript-cli/main.rs"
name = "chordscript-cli"

[dependencies]
chordscript = { path = "chordscript" }
xflags = "0.2.4"

[workspace]
members = [
  "chordscript",
  #"web-server",
  "chordscript-wasm",
]

